--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,17 +1,17 @@
 #-------------------------------
 # General Site Settings
 
-title: Artists Theme
-description: Thinker // Designer // YouTuber
-email: devtipsfordesigners@gmail.com
+title: Giingo Labs
+description: Spark Core powered Quadcopters
+email: jantsankhorloo@giingo.io
 
 # NOTE: The Logo and Background image are defined in the all.sass document.
 
 menu:
-- {name: About Me, url: '#about-me'}
-- {name: Work, url: '#work'}
-- {name: Clients, url: '#clients'}
-- {name: Contact, url: '#contact'}
+- {name: About, url: '#about-me'}
+- {name: Products, url: '#work'}
+- {name: Blog, url: 'www.giingo.io'}
+#- {name: Contact, url: '#contact'}
 
 #-------------------------------
 # SEO Section
@@ -19,9 +19,9 @@ menu:
 # NOTE: Providing SEO information will make this website more searchable on the internet.
 
 seo:
-  description: 'Provide a description for your website to make it visible to search engines.'
-  rel-author: 'https://plus.google.com/u/0/+DevTipsForDesigners/'
-  rel-publisher: 'https://plus.google.com/u/0/+DevTipsForDesigners/'
+  description: 'Spark Core Giingo Labs Quadcopters'
+  rel-author: ''
+  rel-publisher: ''
 
 #-------------------------------
 # About Section
@@ -29,21 +29,18 @@ seo:
 # NOTE: The avatar is defined in the all.sass document.
 
 blurb: >
-  **Travis specializes in making things** for human people.
-  Most of the things he makes are [digital interfaces](http://travisneilson.com),
-  but he also puts effort into crafting [next-level beats](http://soundcloud.com/travis-neilson)
-  and [YouTube videos](http://youtube.com/user/devtipsfordesigners) about making codes happen.
+  Giingo Labs makes awesome Quadcopters.
 
 
-skills:
-- {name: Communication, value: '9'}
-- {name: Organization, value: '7'}
-- {name: Learning, value: '10'}
-- {name: Teaching, value: '6'}
-- {name: Planning, value: '7'}
-- {name: Visual Design, value: '5'}
-- {name: UX Design, value: '8'}
-- {name: Programming, value: '6'}
+#skills:
+#- {name: Communication, value: '9'}
+#- {name: Organization, value: '7'}
+#- {name: Learning, value: '10'}
+#- {name: Teaching, value: '6'}
+#- {name: Planning, value: '7'}
+#- {name: Visual Design, value: '5'}
+#- {name: UX Design, value: '8'}
+#- {name: Programming, value: '6'}
 
 #-------------------------------
 # Work Section
@@ -53,10 +50,10 @@ projects:
 - {name: City-IN website concept, folder: 'proj-2', file: 'work/proj-2.html'}
 - {name: Crispy Icons, folder: 'proj-3', file: 'work/proj-3.html'}
 - {name: Flat Mobile UI/UX Concept, folder: 'proj-4', file: 'work/proj-4.html'}
-- {name: Fresh It Up, folder: 'proj-5', file: 'work/proj-5.html'}
-- {name: Timeline Page, folder: 'proj-6', file: 'work/proj-6.html'}
-- {name: Weather Dashboard, folder: 'proj-7', file: 'work/proj-7.html'}
-- {name: Stripes & Co, folder: 'proj-8', file: 'work/proj-8.html'}
+#- {name: Fresh It Up, folder: 'proj-5', file: 'work/proj-5.html'}
+#- {name: Timeline Page, folder: 'proj-6', file: 'work/proj-6.html'}
+#- {name: Weather Dashboard, folder: 'proj-7', file: 'work/proj-7.html'}
+#- {name: Stripes & Co, folder: 'proj-8', file: 'work/proj-8.html'}
 
 
 
@@ -64,27 +61,27 @@ projects:
 #-------------------------------
 # Clients Section
 
-clients:
-- {avatar: 'face-aaroni.jpg',
-  name: 'Scott Summers',
-  title: 'Director of Design, OnToText Ind.',
-  quote: '<p><strong>While we all felt that Travis was a great</strong> asset to our team — and really worked hard to understand our products from the point of view of the customer — we also all agree he should shower more often.</p>',
-  logo: 'logo1.png'}
-- {avatar: 'face-atariboy.jpg',
-  name: 'Hank McCoy',
-  title: 'Eater of Salad, Antartica Int.',
-  quote: '<p><strong>Working with Travis was the highlight of my career.</strong> Other moments of note were collecting the largest number of paperclips in the office, and winning a trophy for saying "uh huh, and then what?" 30 times in a row to my girlfriend without her noticing.</p>',
-  logo: 'logo2.png'}
-- {avatar: 'face-jackiesaik.jpg',
-  name: 'Stacy Lang',
-  title: 'Social Media Girl, Quebec Int.',
-  quote: '<p><strong>Yea, I guess hes good at computers or something,</strong> but let me ask you this: If a cat always lands on its feet, and buttered bread always lands butter side down, what would happen if you tied buttered bread on top of a cat?</p>',
-  logo: 'logo3.png'}
-- {avatar: 'face-teleject.jpg',
-  name: 'Cleatus Cassidy',
-  title: 'VP of Helmut, Lorem Sorem LLC.',
-  quote: '<p><strong>Back in old country</strong> only nerds who is playing on computers. Now all bros is wanting to make codes and junk. I lost foot in war. You dont see girls asking me about homework.</p>',
-  logo: 'logo4.png'}
+#clients:
+#- {avatar: 'face-aaroni.jpg',
+#  name: 'Scott Summers',
+#  title: 'Director of Design, OnToText Ind.',
+#  quote: '<p><strong>While we all felt that Travis was a great</strong> asset to our team — and really worked hard to understand our products from the point of view of the customer — we also all agree he should shower more often.</p>',
+#  logo: 'logo1.png'}
+#- {avatar: 'face-atariboy.jpg',
+#  name: 'Hank McCoy',
+#  title: 'Eater of Salad, Antartica Int.',
+#  quote: '<p><strong>Working with Travis was the highlight of my career.</strong> Other moments of note were collecting the largest number of paperclips in the office, and winning a trophy for saying "uh huh, and then what?" 30 times in a row to my girlfriend without her noticing.</p>',
+#  logo: 'logo2.png'}
+#- {avatar: 'face-jackiesaik.jpg',
+#  name: 'Stacy Lang',
+#  title: 'Social Media Girl, Quebec Int.',
+#  quote: '<p><strong>Yea, I guess hes good at computers or something,</strong> but let me ask you this: If a cat always lands on its feet, and buttered bread always lands butter side down, what would happen if you tied buttered bread on top of a cat?</p>',
+#  logo: 'logo3.png'}
+#- {avatar: 'face-teleject.jpg',
+#  name: 'Cleatus Cassidy',
+#  title: 'VP of Helmut, Lorem Sorem LLC.',
+#  quote: '<p><strong>Back in old country</strong> only nerds who is playing on computers. Now all bros is wanting to make codes and junk. I lost foot in war. You dont see girls asking me about homework.</p>',
+#  logo: 'logo4.png'}
   
   
 #-------------------------------
