--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,7 +10,7 @@ email: jantsankhorloo@giingo.io
 menu:
 - {name: About, url: '#about-me'}
 - {name: Products, url: '#work'}
-- {name: Blog, url: 'www.giingo.io'}
+- {name: Blog, url: 'www.giingo.com'}
 #- {name: Contact, url: '#contact'}
 
 #-------------------------------
@@ -19,7 +19,7 @@ menu:
 # NOTE: Providing SEO information will make this website more searchable on the internet.
 
 seo:
-  description: 'Spark Core Giingo Labs Quadcopters'
+  description: 'Giingo Labs Quadcopters'
   rel-author: ''
   rel-publisher: ''
 
@@ -28,8 +28,7 @@ seo:
 
 # NOTE: The avatar is defined in the all.sass document.
 
-blurb: >
-  Giingo Labs makes awesome Quadcopters.
+blurb: Giingo Labs makes awesome Quadcopters.
 
 
 #skills:
@@ -46,10 +45,10 @@ blurb: >
 # Work Section
 
 projects:
-- {name: TYPO International Design Talks, folder: 'proj-1', file: 'work/proj-1.html'}
-- {name: City-IN website concept, folder: 'proj-2', file: 'work/proj-2.html'}
-- {name: Crispy Icons, folder: 'proj-3', file: 'work/proj-3.html'}
-- {name: Flat Mobile UI/UX Concept, folder: 'proj-4', file: 'work/proj-4.html'}
+- {name: Nano Quad, folder: 'proj-1', file: 'work/proj-1.html'}
+#- {name: City-IN website concept, folder: 'proj-2', file: 'work/proj-2.html'}
+#- {name: Crispy Icons, folder: 'proj-3', file: 'work/proj-3.html'}
+#- {name: Flat Mobile UI/UX Concept, folder: 'proj-4', file: 'work/proj-4.html'}
 #- {name: Fresh It Up, folder: 'proj-5', file: 'work/proj-5.html'}
 #- {name: Timeline Page, folder: 'proj-6', file: 'work/proj-6.html'}
 #- {name: Weather Dashboard, folder: 'proj-7', file: 'work/proj-7.html'}
